fix: svg cut for some overflows

--- a/backend-clapy/export-templates/_resets.module.css
+++ b/backend-clapy/export-templates/_resets.module.css
@@ -29,3 +29,7 @@
 :where(.clapyResets) img {
   object-fit: contain;
 }
+
+:where(.clapyResets) svg {
+  overflow: visible;
+}
